[gd_scene load_steps=3 format=3 uid="uid://uffiacfa5a7c"]

[ext_resource type="Script" uid="uid://daw0cyehp6dtw" path="res://scripts/enemy.gd" id="1_rdyb7"]
[ext_resource type="PackedScene" uid="uid://72rkbcdhsyob" path="res://scenes/overlap/hitbox.tscn" id="1_x8u5w"]

[node name="Emeny" type="CharacterBody2D" groups=["enemies", "level_restart"]]
collision_layer = 4
script = ExtResource("1_rdyb7")

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true

[node name="RayCastRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(8, 0)
collision_mask = 5

[node name="RayCastLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-8, 0)
collision_mask = 5

[node name="NPCHitbox" parent="." instance=ExtResource("1_x8u5w")]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 72

[node name="AttackCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="area_entered" from="NPCHitbox" to="." method="_on_npc_hitbox_area_entered"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]

[editable path="NPCHitbox"]
